--- a/postgres-explain-visualizer.cabal
+++ b/postgres-explain-visualizer.cabal
@@ -44,8 +44,14 @@ library
     import: common-extensions
     import: common-ghc-options
     exposed-modules: 
-      PostgresExplainVisualizer 
-    build-depends:    
+      PostgresExplainVisualizer
+      PostgresExplainVisualizer.Database.Pool
+      PostgresExplainVisualizer.Effects.Database
+      PostgresExplainVisualizer.Environment
+      PostgresExplainVisualizer.Import
+      PostgresExplainVisualizer.Server
+      PostgresExplainVisualizer.Types
+    build-depends:
       base >= 4.13 && <= 4.17
       , aeson
       , containers
@@ -73,8 +79,19 @@ library
       , postgresql-simple
       , postgresql-simple-migration
       , resource-pool
-      
+      , opaleye
+      , profunctors
+      , product-profunctors
+
 
     hs-source-dirs:   src
 
 
+executable pev-exe
+  main-is: Main.hs
+  build-depends:
+    base
+    , postgres-explain-visualizer
+  hs-source-dirs: app
+  ghc-options: -threaded -rtsopts -with-rtsopts=-N
+  default-language: Haskell2010
