Show createdAt, NonEmptyText

--- a/postgres-explain-visualizer.cabal
+++ b/postgres-explain-visualizer.cabal
@@ -47,6 +47,7 @@ library
       PostgresExplainVisualizer
       PostgresExplainVisualizer.Database.Pool
       PostgresExplainVisualizer.Database.Migrations
+      PostgresExplainVisualizer.Database.Orphanage
       PostgresExplainVisualizer.Effects.Database
       PostgresExplainVisualizer.Environment
       PostgresExplainVisualizer.Import
