--- a/.github/workflows/heroku.yml
+++ b/.github/workflows/heroku.yml
@@ -9,7 +9,7 @@ jobs:
     - uses: actions/checkout@v2.3.4
     - uses: cachix/install-nix-action@v13
       with:
-        nix_path: nixpkgs=channel:nixos-21.05
+        nix_path: nixpkgs=channel:nixos-21.11
     - name: Login to Heroku Container Registry
       env:
         HEROKU_API_KEY: ${{ secrets.HEROKU_API_KEY }}
@@ -22,10 +22,10 @@ jobs:
       env:
         HEROKU_API_KEY: ${{ secrets.HEROKU_API_KEY }}
       run: |
-        docker tag ecliptic-surf:latest registry.heroku.com/postgres-explain-visualizer/web
-        docker push registry.heroku.com/postgres-explain-visualizer/web
+        docker tag ecliptic-surf:latest registry.heroku.com/pgexplain/web
+        docker push registry.heroku.com/pgexplain/web
     - name:  Release
       env:
         HEROKU_API_KEY: ${{ secrets.HEROKU_API_KEY }}
       run:
-        heroku container:release web -a postgres-explain-visualizer
+        heroku container:release web -a pgexplain
