--- a/postgres-explain-visualizer.cabal
+++ b/postgres-explain-visualizer.cabal
@@ -35,6 +35,7 @@ common common-extensions
         NamedFieldPuns
         OverloadedStrings  
         TypeOperators
+        ImportQualifiedPost
     default-language: Haskell2010
 
 common common-ghc-options
@@ -50,7 +51,6 @@ library
       PostgresExplainVisualizer.Database.Orphanage
       PostgresExplainVisualizer.Effects.Database
       PostgresExplainVisualizer.Environment
-      PostgresExplainVisualizer.Import
       PostgresExplainVisualizer.Server
       PostgresExplainVisualizer.Server.Pages
       PostgresExplainVisualizer.Types
