somehow managed to make the state cookie work

--- a/postgres-explain-visualizer.cabal
+++ b/postgres-explain-visualizer.cabal
@@ -104,6 +104,7 @@ library
       , tls
       -- for cookie authentication:
       , servant-auth-server
+      , cookie
 
 
     hs-source-dirs:   src
