basic redirect to login when creating a plan

--- a/postgres-explain-visualizer.cabal
+++ b/postgres-explain-visualizer.cabal
@@ -57,6 +57,7 @@ library
       PostgresExplainVisualizer.Environment
       PostgresExplainVisualizer.Server
       PostgresExplainVisualizer.Server.Pages
+      PostgresExplainVisualizer.Server.Types
       PostgresExplainVisualizer.Types
       PostgresExplainVisualizer.Models.Common
       PostgresExplainVisualizer.Models.Plan
